added js functionality, styling, and updated readme

--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 <body>
     <main class="main">
 
-        <h1 class="fs-3 text-grey title">Password Generator</h1>
+        <h1 class="fs-3 text-grey title">Random Password Generator</h1>
         <div class="field bg-dark fs-1 flex">
             <p id="fieldText" class="fieldText text-grey">P4$5W0rD!</p>
             <div class="copy flex">
